メインペ－じ修正

--- a/src/final-app/public/index.html
+++ b/src/final-app/public/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>CDA Chat</title>
 	<link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.2/semantic.css" />
-	<link type="text/css" rel="stylesheet" href="/static/css/common.css" />
+	<link type="text/css" rel="stylesheet" href="/stylesheets/common.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.2/semantic.js"></script>
 <style type="text/css">
@@ -13,13 +13,13 @@
 <body>
 	<div class="ui fixed menu">
 		<div class="container">
-			<div class="item">ITS-CDA BBS</div>
+			<div class="item">ITS-CDA Chat</div>
 			<div class="menu right">
 				<div class="item">未ログイン</div>
 				<div class="ui buttons">
-					<div class="ui button"><a href="<c:url value="/UserInfoInput"/>">Sign up</a></div>
+					<div class="ui button"><a href="#">Sign up</a></div>
 					<div class="or"></div>
-					<div class="ui button"><a href="<c:url value="/login"/>">Login</a></div>
+					<div class="ui button"><a href="#">Login</a></div>
 				</div>
 			</div>
 		</div>
@@ -29,7 +29,7 @@
 		<div class="ui comments">
 			<div class="comment">
 				<a class="avatar">
-					<img src="/static/image/Avatar/Small/01.jpg"/>
+					<img src="/images/Avatar/Small/01.jpg"/>
 				</a>
 				<div class="content">
 					<div class="text">Temp Title</div>
