ChatRoom, ChatMessageに投稿者のAvatarIdを追加

--- a/src/final-app/public/temp_api_client_for_chat_messages.html
+++ b/src/final-app/public/temp_api_client_for_chat_messages.html
@@ -44,6 +44,7 @@
 
 					var selectedUser = $scope.usersIdHash[$scope.chatMessage.createdByUserId];
 					$scope.chatMessage.createdByUserName = selectedUser.userName;
+					$scope.chatRoom.createdByUserAvatarId = selectedUser.avatarId;
 
 					$http.post('/api/chat_messages', $scope.chatMessage)
 						.success(function(data, status, headers, config){
