--- a/src/final-app/public/index.html
+++ b/src/final-app/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<html ng-app="app">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>CDA Chat</title>
@@ -7,6 +7,9 @@
 	<link type="text/css" rel="stylesheet" href="/stylesheets/common.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.2/semantic.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-messages.min.js"></script>
+	<script type="text/javascript" src="/javascripts/main.js"></script>
 <style type="text/css">
 </style>
 </head>
@@ -24,17 +27,17 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
+	<div class="container" ng-controller="ChatRoomListController">
 		<h1>Chat Room List</h1>
-		<div class="ui comments">
+		<div class="ui comments" ng-repeat="chatRoom in chatRooms">
 			<div class="comment">
 				<a class="avatar">
-					<img src="/images/Avatar/Small/01.jpg"/>
+					<img src="/images/Avatar/Small/{{chatRoom.createdByUserAvatarId}}.jpg"/>
 				</a>
 				<div class="content">
-					<div class="text">Temp Title</div>
-					<div class="author">Temp User</div>
-					<div class="metadata">2015/07/01 0:00</div>
+					<div class="text">{{chatRoom.title}}</div>
+					<div class="author">{{chatRoom.createdByUserName}}</div>
+					<div class="metadata">{{chatRoom.createdAt}}</div>
 				</div>
 			</div>
 		</div>
