--- a/src/final-app/public/index.html
+++ b/src/final-app/public/index.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.2/semantic.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-messages.min.js"></script>
-	<script type="text/javascript" src="/javascripts/main.js"></script>
+	<script type="text/javascript" src="/javascripts/app.js"></script>
 <style type="text/css">
 </style>
 </head>
