--- a/src/final-app/public/temp.html
+++ b/src/final-app/public/temp.html
@@ -6,5 +6,6 @@
 	<div><a href="temp_api_client_for_users.html">Users</a></div>
 	<div><a href="temp_api_client_for_chat_rooms.html">Chat Rooms</a></div>
 	<div><a href="temp_api_client_for_chat_messages.html">Chat Messages</a></div>
+	<div><a href="temp_api_client_for_login.html">Login</a></div>
 </body>
 </html>
